--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.11.2",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "debounce": "^1.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
