--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arany-5d-weboldal",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "debounce": "^1.2.1",
+    "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
