--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-router": "^6.4.1",
