--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mdxeditor/editor": "^3.11.0",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.4",
@@ -19,10 +20,12 @@
     "dayjs": "^1.11.10",
     "debounce": "^1.2.1",
     "history": "^5.3.0",
+    "i18next": "^23.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.1",
     "react-markdown": "^8.0.3",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
