--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mdxeditor/editor": "^3.11.0",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.4",
+    "@mui/x-date-pickers": "^7.13.0",
     "@supabase/supabase-js": "^1.35.7",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.11.2",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
-    "debounce": "^1.2.1",
     "history": "^5.3.0",
     "i18next": "^23.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.1",
     "react-markdown": "^8.0.3",
     "react-router": "^6.4.1",
