--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "react-router-dom": "^6.26.1",
     "remark-gfm": "^3.0.1",
     "uuid": "^9.0.1",
-    "vite": "^5.4.8",
+    "vite": "^5.4.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org kraszni-marcell --project aranyd-vercel-app ./build && sentry-cli sourcemaps upload --org kraszni-marcell --project aranyd-vercel-app ./build"
